# UniData-Sieve-Excel

./: .coverage  .gitignore  README.md  app.py  build.bat  cli.py  cli_out.txt  cli_p2.txt  cov_report.txt  debug_excel.txt  debug_ruanjian.txt  launcher.py  pyproject.toml  pytest_final.txt  pytest_out.txt  pytest_p2.txt  requirements.txt  result_check.txt  result_raw.txt  run_app.bat  run_web.sh
config/: default_config.json  schema.py
engine/: __init__.py  aggregator.py  excel_handler.py  exporter.py  matcher.py  processor.py
tests/: conftest.py  test_aggregator.py  test_excel_handler.py  test_exporter.py  test_matcher.py  test_processor.py  test_robustness.py
tests/fixtures/: generate_fixtures.py
